<resources>
    <string name="app_name">Pain Diary</string>
    <string name="app_name_long">Privacy Friendly Pain Diary</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="okay">Okay</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="save_error">Saving not possible.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="changes_discarded">Changes discarded.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="welcome_question">How do you feel today?</string>
    <string name="help">Help</string>
    <string name="help_whatis">What is Privacy Friendly Pain Diary?</string>
    <string name="help_whatis_answer">Privacy Friendly Pain Diary is an app that allows you to make daily diary entries recording your condition and the intensity, location, nature and time of the pain you feel, as well as the medication you take and additional notes.</string>
    <string name="help_privacy">What makes the app privacy friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Pain Diary requires minimal permissions. It does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions does the app require?</string>
    <string name="help_permission_answer">Privacy Friendly Pain Diary requires write access to your device\'s storage if you wish to export your diary entries to PDF. All other features do not require any permissions.</string>
    <string name="help_add_entry">How do I add a new diary entry?</string>
    <string name="help_add_entry_answer">A new diary entry can be added by selecting a day in the calendar. There can however only be one entry per day. Days for which entries already exist are marked in the calendar.</string>
    <string name="help_entry_information">Which information is recorded in a diary entry?</string>
    <string name="help_entry_information_answer">Diary entries can be used to document your condition and the intensity, location, nature and time of the pain you feel. The medication you take and additional notes can also be recorded.</string>
    <string name="help_userdetails">Do I have to enter user details?</string>
    <string name="help_userdetails_answer">The app does not require you to enter any user details. You are free to enter your name, date of birth and gender and you can delete information you previously entered at any time. The information you enter is not shared or transmitted in any way.</string>
    <string name="help_pdf_export">How can I export my diary entries?</string>
    <string name="help_pdf_export_answer">You can export all diary entries made within a period of time that you specify. You also have the option to share that PDF. Select the menu item "PDF Export" to do so.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Karola Marky, Susanne Felsen, Rybien Sinjari</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-pain-diary">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_reset">Reset app</string>
    <string name="pref_reset_summary">Delete all diary entries and user details</string>
    <string name="pref_reset_warning">All diary entries and user details will be deleted irrevocably.\nAre you sure?</string>
    <string name="pref_medication">Remember Medication</string>
    <string name="pref_medication_summary">The medication last entered is automatically added to new entries</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_reminder">Daily Reminder</string>
    <string name="pref_reminder_time">Reminder Time</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This app allows you to make daily diary entries recording your condition and the intensity, location, nature and time of the pain you feel, as well as the medication you take and additional notes.</string>
    <string name="slide2_heading">New Diary Entry</string>
    <string name="slide2_text">The main view of this app is a calendar. You can add a new diary entry by selecting a day in this calendar. You will then be asked to answer questions regarding your condition and the pain you are experiencing.</string>
    <string name="slide3_heading">User Details</string>
    <string name="slide3_text">At the end of this tutorial you will be asked to enter your user details. This step is optional and can be skipped. User details can also be entered or deleted at a later point.</string>
    <string name="slide4_heading">Github and Guide</string>
    <string name="slide4_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the help page or the Privacy Friendly App Guide.</string>
    <string name="user_details">User Details </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="name_invalid">Please enter a valid name.</string>
    <string name="date_invalid">Please enter a valid date.</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="pain_stabbing">stabbing</string>
    <string name="pain_dull">dull</string>
    <string name="pain_shooting">shooting</string>
    <string name="pain_burning">burning</string>
    <string name="pain_throbbing">throbbing</string>
    <string name="new_diary_entry">New Diary Entry</string>
    <string name="edit_diary_entry">Edit Diary Entry</string>
    <string name="warning_leaving">The information you have entered will be lost. Do you want to continue?</string>
    <string name="heading_condition">How do you feel?</string>
    <string name="heading_painlevel">How strong is your pain?</string>
    <string name="subheading_painlevel">(0 = no pain, 10 = very strong pain (on the verge of fainting))</string>
    <string name="heading_bodyregion">Where do you feel pain?</string>
    <string name="body_front">Front:</string>
    <string name="body_back">Back:</string>
    <string name="heading_paindescription">What is the nature of your pain?</string>
    <string name="heading_timeofpain">When do you feel pain?</string>
    <string name="time_day">during the day</string>
    <string name="time_morning">in the morning</string>
    <string name="time_afternoon">in the afternoon</string>
    <string name="time_evening">in the evening</string>
    <string name="time_night">at night</string>
    <string name="heading_notes">Do you have any additional comments?</string>
    <string name="subheading_notes">(e.g. concerning exercise or diet)</string>
    <string name="heading_medication">What medication are you taking?</string>
    <string name="subheading_medication">Press the green plus to add new medications. Enter the quantity (e. g. number of pills) you take in the morning, at noon, in the evening and at night.</string>
    <string name="medication">Medication</string>
    <string name="medication_name">Name</string>
    <string name="dose">Dose</string>
    <string name="condition">Condition:</string>
    <string name="painlevel">Pain Intensity:</string>
    <string name="bodyregion">Location of the pain:</string>
    <string name="paindescription">Nature of the pain:</string>
    <string name="unknown">unknown</string>
    <string name="timeofpain">Time of the pain:</string>
    <string name="notes">Comments:</string>
    <string name="none">none</string>
    <string name="medication_taken">Medication taken:</string>
    <string name="warning_deleting">Are you sure you want to delete this diary entry?</string>
    <string name="reminders_channel_title">Reminders</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_text">Don\'t forget to make your daily pain diary entry!</string>
    <string name="snooze">Snooze</string>
    <string name="export_pdf">PDF Export</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="heading_export">Please select a range of dates for which your pain diary entries should be exported as PDF.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date_error">Please enter a start date.</string>
    <string name="end_date_error">Please enter an end date.</string>
    <string name="patient_details">Patient Details</string>
    <string name="diary_entries">Pain Diary Entries</string>
    <string name="diary_entries_none">No entries found.</string>
    <string name="permission_write_error">Error: Do not have permission to write.</string>
    <string name="permission_write_denied">Permission denied. Cannot export diary entries.</string>
    <string name="permission_write_granted">Permission granted. Please try again.</string>
    <string name="export_success">PDF was saved to documents folder.</string>
    <string name="export_failure">Unknown Error: PDF could not be saved.</string>
    <string name="share_caution">Be careful who you share your medical information with.</string>
    <string name="dialog_need_permission_for_notifications">Permission to send notifications is needed for this feature.</string>
    <string name="dialog_need_permission_for_notifications_title">Enable notifications</string>
	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
    <string name="dialog_goodbye_google_desc">Unfortunately, our apps have to say goodbye to Google Play. The app is still usable but will not receive any updates in the future.\nYou can find more information about the reasons why this is not the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
    </string>
    <string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>