<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_main" />
        <item
            android:id="@+id/nav_user_details"
            android:icon="@drawable/ic_user"
            android:title="@string/user_details" />
        <item
            android:id="@+id/nav_export_pdf"
            android:icon="@drawable/ic_export_pdf"
            android:title="@string/export_pdf" />
        <item
            android:id="@+id/nav_export_csv"
            android:icon="@drawable/ic_export_csv"
            android:title="CSV Export" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_tutorial"
            android:title="@string/action_tutorial" />
    </group>

    <group android:id="@+id/nav_group_add"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/action_about" />
    </group>
</menu>
