<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general">
        <Preference android:key="pref_reset"
            android:title="@string/pref_reset"
            android:summary="@string/pref_reset_summary" />
        <SwitchPreference android:key="pref_medication"
            android:title="@string/pref_medication"
            android:summary="@string/pref_medication_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_notifications">
        <SwitchPreference android:key="pref_reminder"
            android:title="@string/pref_reminder"
            android:defaultValue="false" />
        <org.secuso.privacyfriendlypaindiary.helpers.TimePreference
            android:key="pref_reminder_time"
            android:title="@string/pref_reminder_time"
            android:defaultValue="64800000" />
    </PreferenceCategory>


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
