<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/diaryentry_slide3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DiaryEntryActivity"
    android:orientation="vertical"
    style="@style/AlertDialog.AppCompat">

    <LinearLayout
        android:id="@+id/paindescription_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paindescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/heading_paindescription"
            android:textSize="@dimen/slide_actions"/>

        <CheckBox
            android:id="@+id/pain_stabbing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/pain_stabbing"
            android:onClick="onPainQualityClicked"/>
        <CheckBox
            android:id="@+id/pain_dull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pain_dull"
            android:onClick="onPainQualityClicked"/>
        <CheckBox
            android:id="@+id/pain_shooting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pain_shooting"
            android:onClick="onPainQualityClicked"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeofpain_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/paindescription_wrapper"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeofpain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/heading_timeofpain"
            android:textSize="@dimen/slide_actions"/>

        <CheckBox
            android:id="@+id/time_all_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/time_day"
            android:onClick="onTimeClicked"/>
        <CheckBox
            android:id="@+id/time_morning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_morning"
            android:onClick="onTimeClicked"/>
        <CheckBox
            android:id="@+id/time_afternoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_afternoon"
            android:onClick="onTimeClicked"/>
        <CheckBox
            android:id="@+id/time_evening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_evening"
            android:onClick="onTimeClicked"/>

    </LinearLayout>

</RelativeLayout>