<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diaryentry_slide3"
    style="@style/AlertDialog.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DiaryEntryActivity">

    <LinearLayout
        android:id="@+id/paindescription_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/paindescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/heading_paindescription"
            android:textSize="@dimen/diaryentry_heading" />

        <CheckBox
            android:id="@+id/pain_stabbing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:onClick="onPainQualityClicked"
            android:text="@string/pain_stabbing" />

        <CheckBox
            android:id="@+id/pain_dull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPainQualityClicked"
            android:text="@string/pain_dull" />

        <CheckBox
            android:id="@+id/pain_shooting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPainQualityClicked"
            android:text="@string/pain_shooting" />

    </LinearLayout>

</RelativeLayout>